added maximum functionality

--- a/src/component/AudioRecorder/AudioRecorder.module.css
+++ b/src/component/AudioRecorder/AudioRecorder.module.css
@@ -1,4 +1,7 @@
-.container{
+.container {
     max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     width: 100%;
 }
